# RDMTest

./: .clang-format  .editorconfig  .gitmodules  CMakeLists.txt  RDMTest.sln  README.md
Debug/: RDMTest.ilk
RDMTest/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RDMDevice.cpp  RDMDevice.h  RDMSupportedParameters.h  RDMTest.cpp  RDMTest.h  RDMTest.vcxproj  RDMTest.vcxproj.filters  RDMTestClass.cpp  RDMTestClass.h  cmake_install.cmake
RDMTest/Debug/: RDMTest.exe.recipe  RDMTest.ilk  vc142.idb
RDMTest/Debug/RDMTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RDMTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RDMTest/RDMTest.dir/Debug/: RDMTest.exe.recipe
RDMTest/RDMTest.dir/Debug/RDMTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  RDMTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RDMTest/RDMTestClasses/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RDMTestClass.cpp  RDMTestClass.h  RDMTestClass.vcxproj  RDMTestClass.vcxproj.filters  S4WRDColorTestClass.cpp  cmake_install.cmake
RDMTest/RDMTestClasses/RDMTestClass.dir/Debug/: RDMTestClass.lib  RDMTestClass.vcxproj.FileListAbsolute.txt
RDMTest/RDMTestClasses/RDMTestClass.dir/Debug/RDMTestClass.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  RDMTestClass.lastbuildstate
include/dmxrdm/: rdm_controller.h  rdm_device.h
include/ui/: console.h  shell.h
src/: CMakeLists.txt  main.cpp
src/dmxrdm/: rdm_controller.cpp  rdm_device.cpp
src/ui/: console.cpp  shell.cpp
